--- a/content/classes/NRES803/Week_10/lab_10.Rmd
+++ b/content/classes/NRES803/Week_10/lab_10.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Week 10 Lab"
+title: "Mixing it up Lab"
 author: "Drew Tyre"
 date: "`r Sys.Date()`"
 output: html_document
@@ -10,15 +10,16 @@ weight: 803101
 lab.eval=FALSE
  # set to 'hide' to produce lab handout.
 knitr::opts_chunk$set(echo = TRUE, tidy = TRUE, warning=FALSE, message=FALSE, results= 'hide', fig.show='hide', tidy.opts=list(arrow = TRUE, width.cutoff=60))
+library("tidyverse")
+library("lme4")
 ```
 
 # Sleep Study
 This is a great dataset to play with. From the help documentation: The average reaction time per day for subjects in a sleep deprivation study. On day 0 the subjects had their normal amount of sleep. Starting that night they were restricted to 3 hours of sleep per night. The observations represent the average reaction time on a series of tests given each day to each subject.
 
-```{r PrepareData, eval = lab.eval}
-library(NRES803)
-library(tidyverse)
-library(lme4) ## notice conflicts with tidyr
+```{r PrepareData, eval = 3}
+library("tidyverse")
+library("lme4") ## notice conflicts with tidyr
 summary(ss.lm <- lm(Reaction ~ Days,sleepstudy))
 ```
 
@@ -37,11 +38,11 @@ However, if the relationship is plotted seperately for each individual in the da
 
 ```{r, eval = lab.eval}
 # group by subject
-ssBase + geom_smooth(method="lm") + facet_wrap(~Subject) + guides(color=FALSE)
+ssBase + geom_smooth(method="lm") + facet_wrap(~Subject) + guides(color="none")
 # suppress legend because facet labels do the job
 ```
 
-We could fit a seperate model to each subject and combine them. This is effectively a Subject*Days interaction model.
+We could fit a separate model to each subject and combine them. This is effectively a Subject*Days interaction model.
 ```{r, eval = lab.eval}
 fm1 <- lmList(Reaction ~ Days | Subject, sleepstudy)
 cc <- coef(fm1)
@@ -58,12 +59,13 @@ meancc <- sapply(cc, mean)
 all.equal(meancc, coef(ss.lm))
 ```
 
-We can use a mixed model approach to get the best of both worlds - an estimate of the population average intercept and slope, and an idea of how much variation there is among individuals. The function lmer() in package lme4 is the method of choice here. The fixed effects part of the formula is identical to the lm() formula, with a response variable on the left of the ˜ and a covariate on the right. The new part specifies the random effects, and these are given in (). To the left of the | are the fixed effects that will vary among groups, and to the right of the | are the variable(s) that specify the groups. In this case the variable Subject defines the groups. As with other formulas, the intercept is implicit, so (Days | Subject) indicates that both the intercept and the slope are allowed to vary among subjects. This is the same as fitting a seperate line to each subject, as we did above.
+We can use a mixed model approach to get the best of both worlds - an estimate of the population average intercept and slope, and an idea of how much variation there is among individuals. The function lmer() in package lme4 is the method of choice here. The fixed effects part of the formula is identical to the lm() formula, with a response variable on the left of the ˜ and a covariate on the right. The new part specifies the random effects, and these are given in (). To the left of the | are the fixed effects that will vary among groups, and to the right of the | are the variable(s) that specify the groups. In this case the variable Subject defines the groups. As with other formulas, the intercept is implicit, so (Days | Subject) indicates that both the intercept and the slope are allowed to vary among subjects. This is the same as fitting a separate line to each subject, as we did above.
 
-```{r MixedModel, eval=lab.eval}
+```{r MixedModel, eval=1}
 # fit a mixed model
-summary(ss.mm <- lmer(Reaction ~ Days + (Days | Subject),
-                      sleepstudy,REML=FALSE))
+ss.mm <- lmer(Reaction ~ Days + (Days | Subject),
+                      sleepstudy,REML=FALSE)
+summary(ss.mm)
 ```
 
 Looking at the summary of the mixed model, you should see a “fixed effects” section which is identical to that from a normal lm() fit, with one notable exception. There are no p-values reported for each coefficient. This isn’t a mistake, it is a deliberate choice by the software designer to avoid an argument over the correct number of degrees of freedom to use for the test! 
@@ -75,7 +77,7 @@ is also a correlation parameter. In this case the random effects are relatively 
 
 We can also get the random perturbations for each group, and combining those with the population level coefficients gives us the coefficients for the line in each group, as shown in the following table. When the random effects (shown in the left 2 columns) are negative, the coefficients for the group are less than the population coefficients, and when they are positive, the group coefficients are greater.
 
-```{r TableCoeffcients, eval=lab.eval, echo=lab.eval}
+```{r TableCoeffcients, eval=lab.eval}
 knitr::kable(cbind(ranef(ss.mm)$Subject, coef(ss.mm)$Subject))
 ```
 
@@ -114,8 +116,8 @@ is called “shrinkage”, because the estimates of the within group coefficient
 
 Let's look at January Frost's mouse dataset. These are morphological measurements of mice caught at various sites in the Niobrara Valley. Let's look at the breakdown of the relationship between ear size and foot length by geographic site. Sex also matters.
 
-```{r figureEarFootbySite, eval=lab.eval, fig.cap='Ear length vs. foot length in mm at a number of sites in the Northwest of Nebraska for two species of deer mouse.'}
-data(mice)
+```{r figureEarFootbySite, eval=-4, fig.cap='Ear length vs. foot length in mm at a number of sites in the Northwest of Nebraska for two species of deer mouse.'}
+data(mice, package = "NRES803data")
 mice = filter(mice, sex != "U")
 basemouse <- ggplot(mice, aes(x=foot, y=ear)) + 
   geom_point(alpha=0.2) +
@@ -128,17 +130,45 @@ basemouse +
 
 A few things are obvious from this plot. First, January collected alot of data at a few sites, and much less at others. Some of the sex size effects are clear in a few sites (two groups of points), but much less clear in others. But most interesting is the variation in slope. In many sites the bigger the feet the bigger the ears. But not everywhere! Put it all in one plot, adjusting the alpha level so overplotting is clearer.
 
-```{r FixedLmList, eval = lab.eval, fig.cap='Ear length by foot length with a predicted line for each site. Shading indicates overlapping points.'}
+```{r FixedLmList, eval = lab.eval}
 
 basemouse +
-  geom_smooth(aes(group=site), method="lm", se=FALSE)
+  geom_smooth(aes(group=site), method="lm", se=FALSE) + 
+  labs(caption = 'Ear length by foot length with a predicted line for each site. Shading indicates overlapping points.')
 ```
 
-So we want to check a model that lets the relationship between feet and ears vary by species and sex. The sites are a random sample of possible places we could look for mice, so we'll treat site as a random effect. We can also see that the slope of the effect varies alot between sites, so we'll let the coefficient of foot vary between sites too, at least initially. Here's the global model, and check the residuals:
+So we want to check a model that lets the relationship between feet and ears vary by species and sex. The sites are a random sample of possible places we could look for mice, so we'll treat site as a random effect. We can also see that the slope of the effect varies a lot between sites, so we'll let the coefficient of foot vary between sites too, at least initially. Here's the global model, and check the residuals:
 ```{r, eval=lab.eval}
 mice.global = lmer(ear ~ foot * species * sex + (foot | site), data = mice)
+summary(mice.global)
+```
 
-rr <- broom::augment(mice.global)
+That model gives a message about convergence failure,
+although it returns a fitted model that looks OK. The one
+possible problem is that the random effects for the
+intercept and the effect of foot are highly correlated. If
+you look at the figure above you can see the problem -- 
+the intercept is way off the figure to the left. As the 
+slope of the line increases, the intercept necessarily 
+decreases. One possible fix is to center the foot and ear
+measurements.
+
+```{r, eval = ifelse(lab.eval, TRUE, -3)}
+mice <- mutate(mice, cfoot = foot - mean(foot),
+               cear = ear - mean(ear))
+mice.global = lmer(cear ~ cfoot * species * sex + (cfoot | site), data = mice)
+summary(mice.global)
+```
+
+The convergence message goes away. If you compare those two summaries you will see that a lot things have stayed the same. The correlation between the random effects drops, the intercept changes (because measuring mean ear vs. mean foot instead of mean ear length when foot = 0), but the residual variance and the 
+the foot coefficient are the same. Incidentally, old
+versions of package lme4 didn't produce this message,
+and it affects which random effects structure is the best.
+
+
+```{r, eval = lab.eval}
+# install package broom.mixed to get augment methods for lme4 models
+rr <- broom.mixed::augment(mice.global)
 ggplot(rr, aes(x = .fitted, y = .resid)) + 
     geom_point() + 
     geom_smooth() + 
@@ -157,7 +187,7 @@ ggplot(rr, aes(sample=.resid)) +
  ggplot(rr, aes(x = .fitted, y = sqrt(abs(.resid)))) + 
     geom_point() + 
     geom_smooth() + 
-    geom_hline(yintercept  = 1)
+    geom_hline(yintercept  = 0.822)
 
 ```
 
@@ -165,65 +195,77 @@ The residuals don't look too bad, although there are some large positive residua
 
 ```{r pickRandomEffect, eval = lab.eval}
 # uncorrelated random effects
-mice.1 = lmer(ear ~ foot * species * sex + (foot -1 | site)+(1 | site), data = mice)
+mice.1 = lmer(cear ~ cfoot * species * sex + (cfoot -1 | site)+(1 | site), data = mice)
 # only random slope
-mice.2 = lmer(ear ~ foot * species * sex + (foot -1 | site), data = mice)
+mice.2 = lmer(cear ~ cfoot * species * sex + (cfoot -1 | site), data = mice)
 # only random intercept
-mice.3 = lmer(ear ~ foot * species * sex +(1 | site), data = mice)
+mice.3 = lmer(cear ~ cfoot * species * sex +(1 | site), data = mice)
 
 aic = sapply(list(mice.global,mice.1,mice.2,mice.3),AIC)
-knitr::kable(cbind(Model=c("Correlated","Uncorrelated","Slope","Intercept"),AIC=format(aic,digits=5)))
+aic <- data.frame(Model=c("Correlated","Uncorrelated","Slope","Intercept"),
+                  AIC=format(aic,digits=5)) %>% 
+  arrange(AIC)
+knitr::kable(aic)
 ```
+If you do that with the uncentered data, the correlated
+random effect is the best, by a large margin! 
+ In the next phase of model selection we use package lmerTest to evaluate the fixed effects structures using backwards selection with F tests.
 
-We're in luck, the model with both a random slope and intercept where the effects are correlated has the lowest AIC, and by a large margin. In the next phase of model selection we use package lmerTest to evaluate the fixed effects structures using backwards selection with F tests.
+```{r globalModelSummary, eval=ifelse(lab.eval, TRUE, 1:3)}
+library("lmerTest") # need to rerun models after loading package to use these functions
+mice.1 <- lmer(cear ~ cfoot * species * sex + (cfoot -1 | site)+(1 | site), data = mice)
 
-```{r globalModelSummary, eval=lab.eval}
-library(lmerTest)
-mice.global = lmer(ear ~ foot * species * sex + (foot | site), data = mice)
-coefTable = summary(mice.global, ddf="Kenward-Roger")$coefficients
+
+coefTable = summary(mice.1,                    ddf="Kenward-Roger")$coefficients
 knitr::kable(coefTable,digits=2,caption='Fixed effects coefficients from a global model of mouse ear length. Degrees of freedom from the Kenward-Roger approximation.')
 ```
 
 Unlike the default `lmer()`, the extra functions in `lmerTest` push the p values out following the practices used in SAS. There is also a nice function that does automatic backwards selection. In order to stay within the R framework we have to change the default values to get a Type I sums of squares test.
 
 ```{r backwardsSelection, eval=lab.eval}
-step(mice.global, ddf = "Satterthwaite")
+step(mice.1, ddf = "Satterthwaite")
 ```
 
-Our final model is simply `ear ~ foot + (1+foot|site)`. This means the relationship between ear and foot length is constant between sexes and species, but varies geographically. I find that quite fascinating. I'll fit this final model, and make a plot or two.
+Our final model is simply `cear ~ cfoot + (cfoot-1|site) + (1|site)`. This means the relationship between ear and foot length is constant between sexes and species, but varies geographically. I find that quite fascinating. I'll fit this final model, and make a plot or two.
 
-```{r finalModelSummary, eval=lab.eval, result='hold'}
-mice.final = lmer(ear ~ foot + (foot | site), data = mice)
+```{r finalModelSummary, eval=ifelse(lab.eval,TRUE,1), result='hold'}
+mice.final = lmer(cear ~ cfoot + (cfoot - 1 | site) + 
+                    (1|site), data = mice)
 summary(mice.final) # capture the output
 ```
 
-You can make predictions from these models just as you would with other models. To use `broom::augment()` you have to specify both the fixed effects values *and* a value for the random effect. 
+You can make predictions from these models just as you would with other models. Unfortunately  `broom.mixed::augment()` doesn't do predictions anymore. So we'll do the manual route. You have to specify both the fixed effects values *and* a value for the random effect. 
 
-```{r, eval=lab.eval}
-library(broom)
-nd <- data.frame(foot=seq(min(mice$foot),max(mice$foot),length=50), 
-                 site=factor("42", levels=unique(mice$site)))
-
-pred42 <- augment(mice.final, newdata=nd) %>%
-  rename(ear=.fitted)
-
-ggplot(mice, aes(x=foot, y=ear)) + 
+```{r, eval= ifelse(lab.eval,TRUE,1:2)}
+nd <- data.frame(cfoot=seq(min(mice$cfoot),
+                           max(mice$cfoot),length=50), 
+                 site=factor("42",
+                             levels=unique(mice$site)))
+# AAAHHH -- have to hack the class of the model
+# to get the predict function working! 
+# unnecessary if you don't use lmerTest
+class(mice.final) <- class(mice.global)
+pred42 <- bind_cols(nd, 
+                    cear = predict(mice.final, newdata=nd, re.form =  NULL)) 
+ggplot(mice, aes(x=cfoot, y=cear)) + 
   geom_point(alpha=0.2) +
-  xlab('Foot Length [mm]') + ylab('Ear Length [mm]') + 
+  xlab('Foot Length deviations [mm]') + 
+  ylab('Ear Length deviations [mm]') + 
   geom_point(data=filter(mice, site=="42"), alpha=1, color="red") + 
   geom_line(data=pred42, size=2, color="red")
 ```
 
 So you could get lines for every site, but that would be a bit messy. We say these predictions are "conditional" on the random effects, because they include the perturbations from the random effects. Another thing you might want are predictions "unconditional" on the random effects. We can get these too but not from `broom::augment()`. Package lme4 includes a `predict()` function for these fitted objects. 
 
-```{r, eval=lab.eval}
+```{r, eval=ifelse(lab.eval,TRUE,1)}
 # get predictions unconditional on random effect
-preduc <- cbind(nd, ear=predict(mice.final, newdata = nd, re.form = ~0))
+preduc <- cbind(nd, cear=predict(mice.final, newdata = nd, re.form = ~0))
 
 # make the plot above, but fade out the red line and add unconditional prediction
-ggplot(mice, aes(x=foot, y=ear)) + 
+ggplot(mice, aes(x=cfoot, y=cear)) + 
   geom_point(alpha=0.2) +
-  xlab('Foot Length [mm]') + ylab('Ear Length [mm]') + 
+  xlab('Foot Length deviations[mm]') + 
+  ylab('Ear Length deviations [mm]') + 
   geom_line(data=pred42, size=2, color="red", alpha=0.4) + 
   geom_line(data=preduc, size=2)
 ```
